# Sentinel-Vault

./: README.md
.github/workflows/: build.yml
c/: CMakeLists.txt  Makefile.mak
c/installer/: sentinel_vault.nsi
c/scripts/: archive_gen.sh  create_appimage.sh  generate_hash.sh  obfuscate_build.sh  run_sandbox.sh  setup.sh
c/src/: crypto.c  crypto.h  destroy.c  fragments.c  fragments.h  integrity.c  integrity.h  main.c  obfuscation.c  obfuscation.h  tpm.c  trigger.c  trigger.h  ui.c  ui.h  ui_glfw.c
c/test/: test_crypto.c
python/: secure-data.py
